buildscript {
    repositories {
        // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
        maven { url = 'https://maven.minecraftforge.net' }
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.1+', changing: true
        classpath files("gradle/plugins/mixingradle-0.7-FG5BUILD.jar")
    }
}
apply plugin: 'net.minecraftforge.gradle'
// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
apply plugin: 'eclipse'
apply plugin: 'maven-publish'
apply plugin: 'org.spongepowered.mixin'

version = '1.18.2-1.3.9'
group = 'me.haydenb.assemblylinemachines' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = 'assemblylinemachines'

// Mojang ships Java 16 to end users in 1.17+ instead of Java 8 in 1.16 or lower, so your mod should target Java 16.
java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
minecraft {

	accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    mappings channel: 'official', version: '1.18.2'
    runs {
        client {
            workingDirectory project.file('run')
            
            //Forge-required properties (2)
            property 'forge.logging.console.level', 'debug'
        	property 'forge.logging.markers', 'REGISTRIES'
        	//Mixin-required properties and arg (3)
        	property 'mixin.env.remapRefMap', 'true'
        	property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg')
        	arg '-mixin.config=mixins.assemblylinemachines.json'
            
            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            
            //Forge-required properties (2)
            property 'forge.logging.console.level', 'debug'
        	property 'forge.logging.markers', 'REGISTRIES'
        	//Mixin-required properties and arg (3)
        	property 'mixin.env.remapRefMap', 'true'
        	property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg')
        	arg '-mixin.config=mixins.assemblylinemachines.json'
        	
            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')
            
            //Forge-required properties (2)
            property 'forge.logging.console.level', 'debug'
        	property 'forge.logging.markers', 'REGISTRIES'
        	//Mixin-required properties and arg (3)
        	property 'mixin.env.remapRefMap', 'true'
        	property 'mixin.env.refMapRemappingFile', file('build/createSrgToMcp/output.srg')
        	arg '-mixin.config=mixins.assemblylinemachines.json'
        	//Datagen-required args (4)
            args '--mod', 'assemblylinemachines', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/'), '--input', file('src/main/resources/')

            mods {
                examplemod {
                    source sourceSets.main
                }
            }
        }
    }
}

// Include resources generated by data generators.
sourceSets {
  main {
    resources {
      srcDirs += "src/generated/resources"
    }
  }
}

repositories{
    maven {
        name = "JEI"
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven{
    	name = "Patchouli"
    	url = "https://maven.blamejared.com"
    }
    //maven {
    	//name = "Mekanism"
     	//url "https://modmaven.dev/"
    //}
	maven {
		name = "Cursemaven"
        url = "https://cursemaven.com"
    }
    
    maven{
    	name = "Spongepowered"
    	url = "https://repo.spongepowered.org/maven"
    }
}

jar.finalizedBy('reobfJar')

jar{
	manifest{
		attributes([
			"MixinConfigs": "mixins.assemblylinemachines.json"
		])
	}
}

dependencies {
  minecraft 'net.minecraftforge:forge:1.18.2-40.0.2'
	
	//JEI - Updated.
 	implementation fg.deobf("mezz.jei:jei-1.18.2:9.4.1.116")
 	
 	//PATCHOULI - Updated.
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.18.2-66-SNAPSHOT")
    
	//MEKANISM - Not yet updated to 1.18.
	//compileOnly fg.deobf("mekanism:Mekanism:1.16.4-10.0.18.445:all")
    //runtimeOnly fg.deobf("mekanism:Mekanism:1.16.4-10.0.18.445:all")
    
    //THE ONE PROBE - Updated.
    implementation fg.deobf("curse.maven:theoneprobe-245211:3671753")
    
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

//Mixin workaround stuff.
mixin {
    
	add sourceSets.main, 'mixins.assemblylinemachines.refmap.json'
	
}

task eclipseWithMap(type: GradleBuild){
    
	tasks = ['createMcpToSrg', 'eclipse', 'genEclipseRuns']
}